removed invest component, and added StakingPool component. Stakingpool dynamically takes what contracts it will interact with from props

--- a/test_interface/src/App.css
+++ b/test_interface/src/App.css
@@ -36,7 +36,7 @@
   color: white;
   background-image: url(./resources/pools.jpg);
   background-position: bottom;
-  background-size: cover;
+  background-size: cover;           /* this stupid thing doesnt actually fully force an image to be in the range. It will slightly cut it off sometimes use background position to get what you want in the frame */
   background-repeat: repeat;
 }
 
